[gd_scene load_steps=11 format=3 uid="uid://drtekcwtpj24x"]

[ext_resource type="PackedScene" uid="uid://bx8sp17yn608h" path="res://prefabs/Diver.tscn" id="1_v5l4s"]
[ext_resource type="PackedScene" uid="uid://cqm2o4de7gtup" path="res://prefabs/Floor.tscn" id="2_hkjto"]
[ext_resource type="Script" path="res://source/Audio.gd" id="2_nyn1x"]
[ext_resource type="AudioStream" uid="uid://2ybhkkccjkqh" path="res://resources/OceanGents.wav" id="4_885ra"]
[ext_resource type="Script" path="res://resources/SpawnTime.gd" id="4_j086n"]
[ext_resource type="Script" path="res://source/BlackoutCurtain.gd" id="5_1r4ce"]
[ext_resource type="PackedScene" uid="uid://b4kf862awclft" path="res://prefabs/Pufferfish.tscn" id="5_scsin"]

[sub_resource type="Resource" id="Resource_myhbk"]
script = ExtResource("4_j086n")
creatureType = ExtResource("2_hkjto")
spawnBeat = 10
lane = 2

[sub_resource type="Resource" id="Resource_f2ma0"]
script = ExtResource("4_j086n")
creatureType = ExtResource("5_scsin")
spawnBeat = 5
lane = 0

[sub_resource type="Resource" id="Resource_16jha"]
script = ExtResource("4_j086n")
creatureType = ExtResource("5_scsin")
spawnBeat = 7
lane = 2

[node name="Main" type="Node2D"]

[node name="Environment" type="Node2D" parent="."]

[node name="Background" type="Polygon2D" parent="Environment"]
color = Color(0, 0.258824, 0.831373, 1)
polygon = PackedVector2Array(0, 0, 640, 0, 640, 360, 0, 360)

[node name="AudioController" type="Node2D" parent="."]
script = ExtResource("2_nyn1x")
fadeSpeed = 10.0
spawnTimes = Array[ExtResource("4_j086n")]([SubResource("Resource_myhbk"), SubResource("Resource_f2ma0"), SubResource("Resource_16jha")])
beatsToPlayer = 8.0

[node name="Music" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource("4_885ra")
volume_db = -30.0

[node name="Divers" type="Node2D" parent="."]

[node name="Diver1" parent="Divers" node_paths=PackedStringArray("nextDiver") instance=ExtResource("1_v5l4s")]
position = Vector2(80, -60)
inputName = "diver1_attack"
nextDiver = NodePath("../Diver2")

[node name="Diver2" parent="Divers" node_paths=PackedStringArray("nextDiver") instance=ExtResource("1_v5l4s")]
position = Vector2(240, -60)
inputName = "diver2_attack"
nextDiver = NodePath("../Diver3")

[node name="Diver3" parent="Divers" node_paths=PackedStringArray("nextDiver") instance=ExtResource("1_v5l4s")]
position = Vector2(400, -60)
inputName = "diver3_attack"
nextDiver = NodePath("../Diver4")

[node name="Diver4" parent="Divers" instance=ExtResource("1_v5l4s")]
position = Vector2(560, -60)
inputName = "diver4_attack"

[node name="Enemies" type="Node2D" parent="."]

[node name="BlackoutCurtain" type="Polygon2D" parent="."]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 640, 0, 640, 360, 0, 360)
script = ExtResource("5_1r4ce")
curtainSpeed = 1.7

[connection signal="changeScene" from="BlackoutCurtain" to="BlackoutCurtain" method="changeSceneToMenu"]
[connection signal="startDivingMovement" from="BlackoutCurtain" to="Divers/Diver1" method="startMoveToRestPosition"]
